# ayr-cpp

./: .gitignore  CMakeLists.txt  ImplementPlan.md  ImplementPlans.md  README.md  StyleGuide.md  TodoList.md  ayr-cpp.sln  test.cpp  threadpool.hpp
aurshine/ayr/: Array.hpp  Atring.hpp  Bytes.hpp  Chain.hpp  Dict.hpp  Dynarray.hpp  Set.hpp  Wrapper.hpp  ayr_memory.hpp  filesystem.hpp  log.hpp  printer.hpp  timer.hpp
aurshine/fs/: File.hpp  Path.hpp  filesystem.hpp
aurshine/json/: json.hpp  json_obj.hpp  json_trait.hpp  parse.hpp
aurshine/law/: AString.hpp  Array.hpp  Bytes.hpp  CString.hpp  Chain.hpp  Dict.hpp  Dynarray.hpp  Iterator.hpp  Node.hpp  Set.hpp  String.hpp  SubString.hpp  Wrapper.hpp  _ayr.h  _str_buffer.hpp  ayr_concepts.hpp  ayr_memory.hpp  ayr_traits.hpp  bunit.hpp  comparator.hpp  container.hpp  hash.hpp  implemented.hpp  law.hpp  log.hpp  object.hpp  printer.hpp  timer.hpp
aurshine/test/: atring_test.hpp  buffer_test.hpp  dict_test.hpp  dynarray_test.hpp  generator_test.hpp  iterator_test.cpp  json_test.hpp  socket_test.hpp  test_main.cpp
aurshine/thread/: Lock.hpp  threadpool.hpp
ayr/: Dict.hpp  coro.hpp  json.hpp  log.hpp  net.hpp
ayr/base/: Array.hpp  CString.hpp  Encoding.hpp  Node.hpp  Void.hpp  ayr_concepts.hpp  ayr_memory.hpp  ayr_traits.hpp
ayr/coro/: Awaiter.hpp  Generator.hpp  Task.hpp
ayr/net/: ServerCallback.hpp
include/ayr/: Array.hpp  Atring.hpp  Chain.hpp  Dict.hpp  DynArray.hpp  Optional.hpp  Set.hpp  air.hpp  async.hpp  ayr_memory.hpp  base.hpp  coro.hpp  json.hpp  (+5 more)
json/: json.hpp  parse.hpp
law/: calculate.hpp  comparator.hpp  container.hpp  iterator.hpp  law.hpp  object.hpp  printer.hpp  sequence.hpp
socket/: server.hpp
test/: async_test.cpp  atring_test.cpp  atring_test.hpp  chain_test.cpp  chain_test.hpp  chat_server.cpp  cstring_test.cpp  dict_test.cpp  dict_test.hpp  dynarray_test.cpp  dynarray_test.hpp  fs_test.cpp  generator_test.cpp  http_test.cpp  iterator_test.cpp  json_test.cpp  json_test.hpp  requestparser_test.cpp  set_test.cpp  socket_test.cpp  socket_test.hpp  test_main.cpp  ultra_server_test.cpp  when_all_test.cpp  when_all_test.hpp
thread/: threadpool.hpp
(+212 files in other folders)
